Update Ver 0.2.1 Minor FIX